samples/_failures_safe/1761630220_2394b9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7be2d2fb.c: In function ‘main’:
./samples/SAFE/__tmp_7be2d2fb.c:160: error: expected ‘(’ at end of input
./samples/SAFE/__tmp_7be2d2fb.c:159:5: error: expected declaration or statement at end of input
  159 |     for
      |     ^~~
